# rps_game

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py  requirements.txt
backend/manager/: lobby_manager.py  user_manager.py
backend/models/: database.py  schemas.py
backend/routes/: admin.py  authorization.py  lobby.py  queue.py  users.py  websocket.py
backend/secure/: auth.py
backend/service/: lobby_service.py  logger.py  user_service.py
backend/tests/: config.py  test_routes.py
backend/usecases/: lobby.py  users.py
frontend/: package-lock.json  vue.config.js
frontend/public/: index.html
frontend/public/assets/css/: login.css  menu.css  register.css  styles.css
frontend/src/: main.js
frontend/src/router/: router.js
frontend/src/scripts/: LoginFormScript.js  MainMenuFormScript.js  RegistrationFormScript.js
frontend/src/views/: LoginView.vue  MainMenuView.vue  RegisterView.vue
frontend/src/websocket/: ws.js
rps_back/: main.py  requirements.txt
rps_back/controllers/: lobby.py  users.py
rps_back/models/: database.py  schemas.py
rps_back/routes/: lobby.py  users.py
rps_back/tests/: config.py  test_routes.py
rps_front/: devcontainer.json  package-lock.json  package.json
rps_front/public/: index.html
rps_front/src/: main.js
rps_front/src/assets/css/: game.css  (+3 more)
rps_front/src/components/: GameForm.vue  GameLobbyForm.vue  LoginForm.vue  RegistrationForm.vue
rps_front/src/router/: router.js
rps_front/src/scripts/: GameFormScript.js  GameLobbyFormScript.js  LoginFormScript.js
(+3 files in other folders)
