[tool.poetry]
name = "rps-game"
version = "0.1.0"
description = "This project is a simple implementation of a Rock-Paper-Scissors (RPS) game using FastAPI for the backend and Vue.js for the frontend."
authors = ["YaSKovzel <y.kovzel.s@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "0.20.0"
annotated-types = "^0.6.0"
bcrypt = "^3.2.0"
certifi = "^2024.2.2"
cffi = "^1.16.0"
click = "^8.1.7"
colorama = "^0.4.6"
exceptiongroup = "^1.2.0"
fastapi = "^0.110.0"
greenlet = "^3.0.3"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httptools = "^0.6.1"
httpx = "^0.27.0"
idna = "^3.6"
iniconfig = "^2.0.0"
packaging = "^24.0"
passlib = "^1.7.4"
pluggy = "^1.4.0"
pycparser = "^2.22"
pydantic = "^2.6.4"
pydantic-core = "^2.16.3"
pytest = "^8.1.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
six = "^1.16.0"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.29"
starlette = "^0.36.3"
tomli = "^2.0.1"
typing-extensions = "^4.10.0"
uvicorn = "^0.29.0"
watchfiles = "^0.21.0"
websockets = "^12.0"

[tool.poetry.dev-dependencies]
anyio = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
